--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gh-pages": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.12.1",
     "react-scripts": "4.0.3",
     "sharp": "^0.28.0",
     "web-vitals": "^1.1.1"
